UI-2643: [PLF4] - alignment bug

--- a/webapp/resources/src/main/webapp/skin/less/social.less
+++ b/webapp/resources/src/main/webapp/skin/less/social.less
@@ -104,9 +104,6 @@
 		a.avatarLargeWithBorder {
 			margin: 15px 0 15px 15px;
 		}
-		.form-horizontal .control-label {
-			padding-top: 0;
-		}
 	}
 }
 
